第五章内容

--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -638,8 +638,8 @@
   title   = {基础设施智慧服务系统（iS3）及其应用},
   journal = {土木工程学报},
   year    = {2018},
-  number  = {?},
-  pages   = {??--??},
+  number  = {1},
+  pages   = {1--12},
   lang    = {zh},
   pinyin  = {zhuhehualixiaojunlinxiaodong},
 }
@@ -1285,6 +1285,41 @@
   title  = {Service Discovery: Eureka Clients},
   year   = {2017},
   url    = {http://cloud.spring.io/spring-cloud-static/spring-cloud-netflix/2.0.0.M5/single/spring-cloud-netflix.html},
+}
+
+@Misc{eurekaclient2018,
+  author = {Apache},
+  title  = {Eureka Client},
+  year   = {2018},
+  url    = {http://www.mvnrepository.com/artifact/com.netflix.eureka/eureka-client/1.8.7},
+}
+
+@Misc{eurekajsclient2018,
+  author = {Jquatier},
+  title  = {Eureka JS Client},
+  year   = {2018},
+  url    = {https://www.npmjs.com/package/eureka-js-client},
+}
+
+@Misc{pythoneureka2018,
+  author = {Kristian Oellegaard},
+  title  = {Python Eureka},
+  year   = {2018},
+  url    = {https://github.com/KristianOellegaard/python-eureka},
+}
+
+@Misc{steeltoe2018,
+  author = {Steeltoe},
+  title  = {Cloud-native .NET microservices},
+  year   = {2018},
+  url    = {http://steeltoe.io},
+}
+
+@Misc{postman2018,
+  author = {Google},
+  title  = {Postman Makes API Development Simple},
+  year   = {2018},
+  url    = {http://steeltoe.io},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
