--- a/tongjiutils.sty
+++ b/tongjiutils.sty
@@ -97,6 +97,17 @@ would like to use here]
 
 \RequirePackage{graphicx}
 
+% 超链接颜色
+\definecolor{hypercolor}{rgb}{0.047,0.216,0.627}
+\RequirePackage{hyperref}
+\hypersetup{
+  colorlinks,
+  linkcolor=hypercolor,
+  anchorcolor=hypercolor,
+  citecolor=hypercolor,
+  urlcolor=hypercolor
+}
+
 %\RequirePackage{tabu}
 
 % 化学符号环境
