--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -1319,7 +1319,21 @@
   author = {Google},
   title  = {Postman Makes API Development Simple},
   year   = {2018},
-  url    = {http://steeltoe.io},
+  url    = {https://www.getpostman.com/},
+}
+
+@Misc{geoserver2018,
+  author = {OSGeo},
+  title  = {GeoServer is an open source server for sharing geospatial data},
+  year   = {2018},
+  url    = {http://geoserver.org/},
+}
+
+@Misc{postgis2018,
+  author = {OSGeo},
+  title  = {PostGIS},
+  year   = {2018},
+  url    = {http://geoserver.org/},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
