--- a/tex/Chap6.tex
+++ b/tex/Chap6.tex
@@ -1,19 +1,37 @@
 %!TEX root = ../thesis.tex
 \chapter{结论与展望}
-\label{chap:conclusion}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{主要结论}
+\section{主要工作与结论}
 
-正文
+本文主要以盾构隧道结构为研究对象，以上海城市轨道交通12号线为工程案例，研究了盾构隧道服役性能定量化的评估方法，建立了考虑空间关联性的服役性能预测模型，以及设计了微服务架构的分析服务，上述三部分主要内容均集成于基础设施智慧服务系统（iS3）。具体内容与结论如下：
 
+（1）在考虑盾构隧道评估指标获取难度和指标相关性基础上，最终选取了六个指标，分别为相对沉降平均值${sett}_{a}$、平均差异沉降$set{{t}_{d\_a}}$、平均收敛变形率${cov}_{a}$、渗漏水面积${d}_{l}$、衬砌剥落面积${d}_{s}$和裂缝长度${d}_{c}$，对39个隧道样本进行专家打分基础上，采用偏最小二乘、主成分分析和典型相关性分析对服役性能TSI回归拟合，标准化$TSI'$和$TSI$公式如下
+\begin{align}
+  & TS{I}'=0.62\sqrt{set{{{{t}'}}_{a}}}+0.13set{{{{t}'}}_{d\_a}}+0.25\operatorname{co}{{{{v}'}}_{a}} \nonumber \\ 
+ & \quad \quad \quad +0.19{{{{d}'}}_{l}}+0.06{{d}_{c}}^{\prime }+0.03{{{{d}'}}_{s}} \nonumber \\
+  & TSI=0.77+0.16\sqrt{set{{t}_{a}}}+0.01set{{t}_{d\_a}}+0.09{{\operatorname{cov}}_{a}} \nonumber \\ 
+ & \quad \quad \quad +0.08{{d}_{l}}+0.05{{d}_{c}}+0.50{{d}_{s}} \nonumber 
+\end{align}
+由于目前隧道样本运营年均在在20年以内，由标准化公式可知，在盾构隧道运营前20年，对服役性能影响较大的指标依次为相对沉降、收敛变形、渗漏水和差异沉降，衬砌剥落和裂缝两个指标的权重较小，主要原因是早期的剥落并不是运营期间产生的，而是由于施工期的不当操作造成，且在运营期这类病害并没有劣化的趋势。
 
+（2）对于长期服役性能的评价（超过20年的运营时间），在不具备数据实例的情况下，采用动态变权函数考虑指标长期劣化对服役性能的影响，修正TSI公式在盾构隧道全寿命周期的应用，构造分段状态变权函数，模拟TSI公式的指标权重随着指标劣化而增加。
 
+（3）以隧道沉降数据为例，建立隧道服役性能退化模型，首先采用自回归滑动平均模型建立ARMA(3,0)模型，该模型对于沉降二阶差分的拟合$R^2$在0.6以上，原始沉降数据的拟合$R^2$在0.95以上；其次引入向量式模拟多维序列的滞后项关联性，和结构式模拟同期项关联性，建立SVAR(3)结构向量模型，该模型对于沉降二阶差分的拟合$R^2$在0.75以上，原始沉降数据的拟合$R^2$在0.97以上。考虑空间关联性的模型精准度得到提高，且由SVAR模型也能得出距离更近的监测点关联性更高。
+
+（4）基于微服务架构，设计了盾构隧道服役性能相关的分析服务，主要包括数据服务、有限元服务和隧道服役性能服务，制定不同服务的请求数据和响应数据标准，讨论在不同分析服务功能下的数据交换方式，包括一对一、一对多、同步、异步的通信模式，对于所有分析服务的管理引入服务发现机制，采用注册中心方式对外提供一致性的调用方式。较传统的一体式应用的扩展性更强，对于已有的不同语言开发的分析功能封装高效，为用户提供一种简单获取分析能力的形式。
+
+（5）本文成果均以微服务架构实现为基础设施智慧服务系统iS3的服务层，并开发了iS3 Desktop桌面端和iS3 Web网页端应用，在工程案例应用中表明，分析服务可为不同应用提供统一的分析能力，辅助管理盾构隧道工程地质勘察、结构设计、运营监测和养护维护各全寿命期阶段。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{工作展望}
+\section{进一步工作与展望}
 
-正文
+本文探讨了盾构隧道服役性能评估、性能退化模型和分析功能服务化三方面内容，服役性能的分析服务融合了多学科交叉内容，本文工作只完成其中的某些部分，未来仍有以下几个方面的内容需要继续研究：
 
+（1）本文研究遇到的最大困难是盾构隧道监测和检测数据的不足，目前已有的数据已统一用数据库维护，后续可依托iS3平台、地铁公司相关部门以及新的数据采集技术不断完善研究数据。
 
+（2）目前上海隧道的运营年限仅有20年，对于100年的设计寿命仍然很短，未来应在服役年限增长和获取更多数据基础上修正隧道服役性能的评估方法。
 
+（3）已有的状态评估模型大部分为数学模型，未考虑力学模型，今后可从数学模型和力学模型结合的角度研究。
+
+（4）对于属性数据和分析功能的服务化，采用微服务架构基本可满足未来的需求，但对于几何数据的服务化，目前WebGIS的二维几何信息较为成熟，但BIM的三维几何信息的服务化仍需深入研究。
