--- a/tex/Abstract.tex
+++ b/tex/Abstract.tex
@@ -3,11 +3,21 @@
 % 定义中英文摘要和关键字
 \begin{cabstract}
 
-磨刀不误砍柴工。自豪地使用\LaTeX{}写作。
+近年我国城市轨道交通建设规模持续增长，快速发展模式导致人们忽略了隧道结构长期服役性能，为避免服役性能的劣化导致结构发生不可逆转破坏，有必要对服役性能进行评估、预测性能退化曲线，并提供服役性能分析服务，指导隧道日常养护维护。在服役性能评估方面，单项指标评估方法未能对整体性能作出评判，且不同的单项指标评估得到的结果不同；力学模型的评估方法较难建立考虑真实病害情况的数值模型。在服役性能预测方面，已有的性能退化模型主要考虑时间因素，未考虑数据之间的空间关联性特点。在服役性能服务方面，目前的综合性平台以单体式应用为主，平台庞大，可扩展性弱。因此本文以盾构隧道结构为研究对象，以上海城市轨道交通12号线为工程案例，研究了盾构隧道服役性能定量化的评估方法，建立了考虑空间关联性的服役性能预测模型，以及设计了微服务架构的分析服务。主要工作和研究成果如下：
+
+（1）定义了盾构隧道服役性能（TSI）相关的基本概念和服役性能评估的基本假设，在考虑盾构隧道评估指标获取难度和指标相关性基础上，结合数据之间的相关性，选取六个指标，分别为相对沉降平均值${sett}_{a}$、平均差异沉降$set{{t}_{d\_a}}$、平均收敛变形率${cov}_{a}$、百环渗漏水面积${d}_{l}$、百环衬砌剥落面积${d}_{s}$、百环裂缝长度${d}_{c}$。对39个隧道样本进行专家打分基础上，采用偏最小二乘、主成分分析和典型相关性分析对服役性能TSI回归拟合，结果表明，对早期盾构隧道服役性能（目前隧道样本的运营年限均在20年以内）影响较大的指标依次为相对沉降、收敛变形、渗漏水和差异沉降，衬砌剥落和裂缝两个指标的权重较小，主要原因是早期的剥落并不是运营期间产生的，而是由于施工期的不当操作造成，且在运营期这类病害并没有劣化的趋势。
+
+（2）针对隧道长期服役性能评估（超过20年运营时间），由于缺少实际样本数据，本文提出动态变权函数对长期服役性能评估进行修正，模拟评估指标随着运营时间不断劣化对服役性能的影响，根据对服役性能指标劣化严重性的假设，构造分段状态变权函数，修正TSI公式应用于隧道全寿命周期。
+
+（3）收集整理隧道历史沉降数据，建立了适用于盾构隧道的自回归滑动平均模型（ARMA）和结构向量（SVAR）时间序列模型。建立的ARMA(3,0)对于沉降二阶差分的拟合$R^2$在0.6以上，原始沉降数据的拟合$R^2$在0.95以上；结构向量模型则引入向量式模拟多维序列的滞后项关联性，和结构式模拟同期项关联性，建立的SVAR(3)模型对于沉降二阶差分的拟合$R^2$在0.75以上，原始沉降数据的拟合$R^2$在0.97以上。考虑空间关联性的模型精准度得到提高，且由SVAR模型也能得出距离更近的监测点关联性更高。
+
+（4）为了改进传统单体式应用模块复杂、体量庞大、可扩展性差等问题，遵循单一功能、独立部署和轻量级通信的原则，设计了盾构隧道服役性能相关的分析服务，包括数据服务、有限元服务和隧道服役性能服务。并研究了微服务的关键技术，如制定不同服务的请求数据和响应数据标准，讨论在不同分析服务功能下的数据交换方式，包括一对一、一对多、同步、异步的通信模式，对于所有分析服务的管理引入服务发现机制，采用注册中心方式对外提供一致性的调用方式。较传统的单体式应用的扩展性更强，对于已有的不同语言开发的分析功能封装高效，为用户提供一种简单获取分析能力的形式。
+
+（5）简单介绍了基础设施智慧服务系统（iS3）的组成，包括基础层、数据层、服务层、应用层和用户层，盾构隧道服役性能微服务成果集成为iS3的服务层，向上对应用层提供服务。另外，本文还开发了iS3 Desktop桌面端和 iS3 Web网页端，在上海地铁12号线工程案例应用中表明，分析服务可为不同应用提供统一的分析能力，辅助管理盾构隧道工程地质勘察、结构设计、运营监测和养护维护各全寿命期阶段。
 
 \end{cabstract}
 
-\ckeywords{aaa，bbb，ccc，ddd}
+\ckeywords{服役性能，性能退化，分析微服务，盾构隧道}
 
 
 \begin{eabstract}
