--- a/tongjiutils.sty
+++ b/tongjiutils.sty
@@ -105,7 +105,7 @@ would like to use here]
   linkcolor=hypercolor,
   anchorcolor=hypercolor,
   citecolor=hypercolor,
-  urlcolor=hypercolor
+  urlcolor=black
 }
 
 %\RequirePackage{tabu}
