--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -64,22 +64,24 @@
 }
 
 @PhdThesis{刘涛2008既有盾构隧道结构性能评价研究,
-  author = {刘涛},
-  title  = {既有盾构隧道结构性能评价研究},
-  school = {同济大学},
-  year   = {2008},
-  lang   = {zh},
-  pages  = {1-161},
-  pinyin = {liutao},
+  author  = {刘涛},
+  title   = {既有盾构隧道结构性能评价研究},
+  school  = {同济大学},
+  year    = {2008},
+  address = {上海},
+  lang    = {zh},
+  pages   = {1-161},
+  pinyin  = {liutao},
 }
 
 @PhdThesis{唐亮2008隧道病害调查分析及衬砌结构的风险分析与控制研究,
-  author = {唐亮},
-  title  = {隧道病害调查分析及衬砌结构的风险分析与控制研究},
-  school = {浙江大学},
-  year   = {2008},
-  lang   = {zh},
-  pinyin = {tangliang},
+  author  = {唐亮},
+  title   = {隧道病害调查分析及衬砌结构的风险分析与控制研究},
+  school  = {浙江大学},
+  year    = {2008},
+  address = {杭州},
+  lang    = {zh},
+  pinyin  = {tangliang},
 }
 
 @Article{杨彤瑶2013基于改进主元分析方法的隧道应变实时监测预警系统,
@@ -94,13 +96,13 @@
   pinyin  = {yangtongyao},
 }
 
-@InProceedings{李明2015基于功效系数法的隧道结构健康监测系统预警研究,
-  author    = {李明 and 陈卫忠 and 杨建平 and 肖正龙},
-  title     = {基于功效系数法的隧道结构健康监测系统预警研究},
-  booktitle = {全国桩基工程学术会议},
-  year      = {2015},
-  lang      = {zh},
-  pinyin    = {limingchenweizhongyangjianping},
+@Article{李明2015基于功效系数法的隧道结构健康监测系统预警研究,
+  author  = {李明 and 陈卫忠 and 杨建平 and 肖正龙},
+  title   = {基于功效系数法的隧道结构健康监测系统预警研究},
+  journal = {Rock and Soil Mechanics},
+  year    = {2015},
+  lang    = {zh},
+  pinyin  = {limingchenweizhongyangjianping},
 }
 
 @PhdThesis{吴江滨2004铁路运营隧道衬砌状态评估体系的建立及工程应用研究,
@@ -405,8 +407,10 @@
 @InProceedings{baffour2002developing,
   author    = {Baffour, R and Abatan, A},
   title     = {Developing an underground infrastructure management system using GPR, GPS and GIS},
-  booktitle = {Proc., IASTED Int. Conf., ACTA Press, Calgary, Alta., Canada},
+  booktitle = {Proc., IASTED Int. Conf.},
   year      = {2002},
+  address   = {Calgary, Alta., Canada},
+  publisher = {ACTA Press},
 }
 
 @Article{chang2004development,
@@ -531,26 +535,31 @@
 @InProceedings{yabuki2013development,
   author    = {Yabuki, Nobuyoshi and Aruga, Takashi and Furuya, Hiroshi},
   title     = {Development and application of a product model for shield tunnels},
-  booktitle = {Proc. of the 30th International Symposium on Automation and Robotics in Construction, Montr{\'e}al, Canada},
+  booktitle = {Proc. of the 30th International Symposium on Automation and Robotics in Construction},
   year      = {2013},
+  address   = {Montr{\'e}al, Canada},
+  publisher = {Curran Associates, Inc.},
 }
 
 @InCollection{borrmann2013multi,
   author    = {Borrmann, ANDR{\'E} and Jubierre, JAVIER},
   title     = {A multi-scale tunnel product model providing coherent geometry and semantics},
   booktitle = {Computing in Civil Engineering (2013)},
+  publisher = {ASCE},
   year      = {2013},
   pages     = {291--298},
+  address   = {Los Angeles},
 }
 
 @PhdThesis{林浩2016基于,
-  author = {林浩},
-  title  = {基于IFC的盾构隧道结构全寿命周期信息模型研究与应用},
-  school = {同济大学},
-  year   = {2016},
-  lang   = {zh},
-  pages  = {1-151},
-  pinyin = {linhao},
+  author  = {林浩},
+  title   = {基于IFC的盾构隧道结构全寿命周期信息模型研究与应用},
+  school  = {同济大学},
+  year    = {2016},
+  address = {上海},
+  lang    = {zh},
+  pages   = {1-151},
+  pinyin  = {linhao},
 }
 
 @Article{朱合华2007数字地下空间与工程,
@@ -667,12 +676,13 @@
 }
 
 @PhdThesis{戴胜2008越江盾构隧道耐久性分析与评估体系研究,
-  author = {戴胜},
-  title  = {越江盾构隧道耐久性分析与评估体系研究},
-  school = {万方数据资源系统},
-  year   = {2008},
-  lang   = {zh},
-  pinyin = {daisheng},
+  author  = {戴胜},
+  title   = {越江盾构隧道耐久性分析与评估体系研究},
+  school  = {同济大学},
+  year    = {2008},
+  address = {上海},
+  lang    = {zh},
+  pinyin  = {daisheng},
 }
 
 @Article{李晓英2008铁路隧道健康状态模糊评价体系研究,
@@ -696,12 +706,13 @@
 }
 
 @PhdThesis{张素磊2012隧道衬砌结构健康诊断及技术状况评定研究,
-  author = {张素磊},
-  title  = {隧道衬砌结构健康诊断及技术状况评定研究},
-  school = {北京: 北京交通大学},
-  year   = {2012},
-  lang   = {zh},
-  pinyin = {zhangsulei},
+  author  = {张素磊},
+  title   = {隧道衬砌结构健康诊断及技术状况评定研究},
+  school  = {北京交通大学},
+  year    = {2012},
+  address = {北京},
+  lang    = {zh},
+  pinyin  = {zhangsulei},
 }
 
 @Article{rao2016fuzzy,
@@ -721,6 +732,7 @@
   year      = {2012},
   author    = {Saaty, Thomas L and Vargas, Luis G},
   volume    = {175},
+  address   = {German},
 }
 
 @Article{张厚美2000圆形隧道装配式衬砌接头刚度模型研究,
@@ -790,13 +802,14 @@
 }
 
 @MastersThesis{卢宏彬2016基于时间序列的结构损伤概率方法研究,
-  author = {卢宏彬},
-  title  = {基于时间序列的结构损伤概率方法研究},
-  school = {华南理工大学},
-  year   = {2016},
-  lang   = {zh},
-  pages  = {1-94},
-  pinyin = {luhongbin},
+  author  = {卢宏彬},
+  title   = {基于时间序列的结构损伤概率方法研究},
+  school  = {华南理工大学},
+  year    = {2016},
+  address = {广州},
+  lang    = {zh},
+  pages   = {1-94},
+  pinyin  = {luhongbin},
 }
 
 @Article{tran2008prediction,
@@ -901,10 +914,11 @@
 }
 
 @PhdThesis{ramaswamy1989estimation,
-  author = {Ramaswamy, Rohit},
-  title  = {Estimation of latent pavement performance from damage measurements},
-  school = {Massachusetts Institute of Technology},
-  year   = {1989},
+  author  = {Ramaswamy, Rohit},
+  title   = {Estimation of latent pavement performance from damage measurements},
+  school  = {Massachusetts Institute of Technology},
+  year    = {1989},
+  address = {Cambridge},
 }
 
 @Article{程姝菲2014盾构隧道长期渗漏水检测新方法,
@@ -986,12 +1000,13 @@
 }
 
 @PhdThesis{滕丽2012基于土体力学特性的盾构隧道施工风险监控系统研究,
-  author = {滕丽},
-  title  = {基于土体力学特性的盾构隧道施工风险监控系统研究},
-  school = {上海大学},
-  year   = {2012},
-  lang   = {zh},
-  pinyin = {tengli},
+  author  = {滕丽},
+  title   = {基于土体力学特性的盾构隧道施工风险监控系统研究},
+  school  = {上海大学},
+  year    = {2012},
+  address = {上海},
+  lang    = {zh},
+  pinyin  = {tengli},
 }
 
 @PhdThesis{杨春山2012运营地铁盾构隧道衬砌结构安全评估体系研究,
@@ -1085,6 +1100,7 @@
   booktitle    = {Proceedings of the twentieth annual SAS users group international conference},
   year         = {1995},
   pages        = {1250--1257},
+  address      = {Dallas},
   organization = {SAS Institute Cary, NC},
 }
 
@@ -1093,6 +1109,7 @@
   publisher = {国防工业出版社},
   year      = {1999},
   author    = {王惠文},
+  address   = {北京},
   lang      = {zh},
   pinyin    = {wanghuiwen},
 }
@@ -1128,12 +1145,13 @@
 }
 
 @PhdThesis{李蓉2007基于层次分析法的桥梁健康状态模糊综合评估方法的研究及其应用,
-  author = {李蓉},
-  title  = {基于层次分析法的桥梁健康状态模糊综合评估方法的研究及其应用},
-  school = {湖南大学},
-  year   = {2007},
-  lang   = {zh},
-  pinyin = {lirong},
+  author  = {李蓉},
+  title   = {基于层次分析法的桥梁健康状态模糊综合评估方法的研究及其应用},
+  school  = {湖南大学},
+  year    = {2007},
+  address = {长沙},
+  lang    = {zh},
+  pinyin  = {lirong},
 }
 
 @PhdThesis{孙九春2002大型桥梁综合评估系统研究,
@@ -1151,6 +1169,7 @@
   publisher = {John Wiley \& Sons},
   year      = {2015},
   author    = {Box, George EP and Jenkins, Gwilym M and Reinsel, Gregory C and Ljung, Greta M},
+  address   = {Hoboken},
 }
 
 @Article{noble2011eviews,
@@ -1165,16 +1184,18 @@
   publisher = {机械工业出版社},
   year      = {2011},
   author    = {潘红宇},
+  address   = {北京},
   lang      = {zh},
   pinyin    = {panhongyu},
 }
 
 @Book{hamilton1994time,
   title     = {Time series analysis},
-  publisher = {Princeton university press Princeton},
+  publisher = {Princeton university press},
   year      = {1994},
   author    = {Hamilton, James Douglas},
   volume    = {2},
+  address   = {Princeton},
 }
 
 @Article{dickey1979distribution,
@@ -1195,6 +1216,7 @@
   publisher = {Springer},
   year      = {2011},
   pages     = {25--25},
+  address   = {Berlin},
 }
 
 @Article{schwarz1978estimating,
@@ -1250,6 +1272,7 @@
   publisher = {University of California, Irvine Doctoral dissertation},
   year      = {2000},
   author    = {Fielding, Roy T and Taylor, Richard N},
+  address   = {Irvine},
 }
 
 @Book{newcomer2005understanding,
@@ -1257,6 +1280,7 @@
   publisher = {Addison-Wesley},
   year      = {2005},
   author    = {Newcomer, Eric and Lomow, Greg},
+  address   = {New Jersey},
 }
 
 @Misc{amqp2017,
@@ -1333,7 +1357,112 @@
   author = {OSGeo},
   title  = {PostGIS},
   year   = {2018},
-  url    = {http://geoserver.org/},
+  url    = {http://www.postgis.org/},
+}
+
+@InProceedings{small2009transforming,
+  author       = {Small, Michael and Zhang, Jie and Xu, Xiaoke},
+  title        = {Transforming time series into complex networks},
+  booktitle    = {International Conference on Complex Sciences},
+  year         = {2009},
+  pages        = {2078--2089},
+  address      = {Shanghai},
+  organization = {Springer},
+}
+
+@Article{sapankevych2009time,
+  author    = {Sapankevych, Nicholas I and Sankar, Ravi},
+  title     = {Time series prediction using support vector machines: a survey},
+  journal   = {IEEE Computational Intelligence Magazine},
+  year      = {2009},
+  volume    = {4},
+  number    = {2},
+  publisher = {IEEE},
+}
+
+@Article{chang2011trend,
+  author    = {Chang, Pei-Chann and Fan, Chin-Yuan and Lin, Jun-Lin},
+  title     = {Trend discovery in financial time series data using a case based fuzzy decision tree},
+  journal   = {Expert Systems with Applications},
+  year      = {2011},
+  volume    = {38},
+  number    = {5},
+  pages     = {6070--6080},
+  publisher = {Elsevier},
+}
+
+@Article{钟登华2018基于混沌时序,
+  author  = {钟登华 and 田耕 and 关涛 and 崔博 and 鄢玉玲},
+  title   = {基于混沌时序-随机森林回归的堆石坝料加水量预测研究},
+  journal = {水力发电学报},
+  year    = {2018},
+  volume  = {3},
+  number  = {1},
+  pages   = {1--12},
+  lang    = {zh},
+  pinyin  = {zhongdenghuatiangenguantao},
+}
+
+@InProceedings{liu2014deep,
+  author       = {Liu, James NK and Hu, Yanxing and You, Jane Jia and Chan, Pak Wai},
+  title        = {Deep neural network based feature representation for weather forecasting},
+  booktitle    = {Proceedings on the International Conference on Artificial Intelligence (ICAI)},
+  year         = {2014},
+  pages        = {1},
+  address      = {Québec},
+  organization = {The Steering Committee of The World Congress in Computer Science, Computer Engineering and Applied Computing (WorldComp)},
+}
+
+@Article{ho2002comparative,
+  author    = {Ho, SL and Xie, M and Goh, TN},
+  title     = {A comparative study of neural network and Box-Jenkins ARIMA modeling in time series prediction},
+  journal   = {Computers \& Industrial Engineering},
+  year      = {2002},
+  volume    = {42},
+  number    = {2-4},
+  pages     = {371--375},
+  publisher = {Elsevier},
+}
+
+@InProceedings{yang2015deep,
+  author    = {Yang, Jianbo and Nguyen, Minh Nhut and San, Phyo Phyo and Li, Xiaoli and Krishnaswamy, Shonali},
+  title     = {Deep Convolutional Neural Networks on Multichannel Time Series for Human Activity Recognition.},
+  booktitle = {IJCAI},
+  year      = {2015},
+  pages     = {3995--4001},
+  address   = {Palo Alto},
+  publisher = {AAAI Press},
+}
+
+@Article{hillmer1982arima,
+  author    = {Hillmer, Steven C and Tiao, George C},
+  title     = {An ARIMA-model-based approach to seasonal adjustment},
+  journal   = {Journal of the American Statistical Association},
+  year      = {1982},
+  volume    = {77},
+  number    = {377},
+  pages     = {63--70},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{engle1982autoregressive,
+  author    = {Engle, Robert F},
+  title     = {Autoregressive conditional heteroscedasticity with estimates of the variance of United Kingdom inflation},
+  journal   = {Econometrica: Journal of the Econometric Society},
+  year      = {1982},
+  pages     = {987--1007},
+  publisher = {JSTOR},
+}
+
+@Article{fung2003modelling,
+  author    = {Fung, Eric HK and Wong, YK and Ho, HF and Mignolet, Marc P},
+  title     = {Modelling and prediction of machining errors using ARMAX and NARMAX structures},
+  journal   = {Applied Mathematical Modelling},
+  year      = {2003},
+  volume    = {27},
+  number    = {8},
+  pages     = {611--627},
+  publisher = {Elsevier},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
