--- a/tex/Denotation.tex
+++ b/tex/Denotation.tex
@@ -1,8 +1,43 @@
 %!TEX root = ../thesis.tex
 \begin{denotation}
-\item[GNU] GNU's Not Unix /'gnu:/
-\item[GFDL] GNU Free Documentation License
-\item[GPL] GNU General Public License
-\item[FSF] Free Software Foundation
-\item[FSF] Free Software Foundation
+\begin{multicols}{2}
+	\item[TSI] 隧道服役性能指标
+	\item[TSI'] 标准化TSI
+	\item[TSR] 隧道服役性能评分
+	\item[${sett}_{ri}$] 第$i$个监测点相对沉降
+	\item[${sett}_{ti}$] 第$i$个监测点总沉降
+	\item[${sett}_{u}$] 大地整体沉降
+	\item[${sett}_{a}$] 相对沉降平均值
+	\item[${sett}_{d\_i}$] 第$i$个监测点与第$i-1$个监测点的差异沉降
+	\item[${sett}_{d\_a}$] 平均差异沉降值
+	\item[${cov}_{a}$] 平均收敛变形率
+	\item[$D$] 隧道外直径设计值
+	\item[${d}_{l}$] 百环渗漏水面积
+	\item[${d}_{s}$] 百环衬砌剥落面积
+	\item[${d}_{c}$] 百环裂缝长度
+	\item[$PRESS_{hj}$] 单个因变量的预测误差平方和
+	\item[${{PRESS}_{h}}$] 所有样本的预测误差平方和
+	\item[${SS_{hj}}$] 单个因变量的误差平方和
+	\item[${SS_{h}}$] 所有样本误差平方和
+	\item[${set{{{{t}'}}_{a}}}$] 标准化相对沉降平均值
+	\item[$set{{{t}'}_{d\_a}}$] 标准化平均差异沉降值
+	\item[${co}{{{v}'}_{a}}$] 标准化平均收敛变形率
+	\item[${{d}'_{l}}$] 标准化渗漏水面积
+	\item[${{d}'_{c}}$] 标准化裂缝长度
+	\item[${{{d}'}_{s}}$] 标准化衬砌剥落面积
+	\item[$g$] 指标健康度
+	\item[$v_{min}$] 指标下限值
+	\item[$v_{max}$] 指标上限值
+	\item[$\mathbf{w}$] 常权向量
+	\item[$\mathbf{{w}'}$] 变权向量
+	\item[$\mathbf{d}(\mathbf{g})$] 状态变权函数向量
+	\item[${{d}_{i}}(\mathbf{g})$] 状态变权函数
+	\item[$Y_t$] 时间序列变量
+	\item[${\varepsilon }_{t}$] 时间序列新息项
+	\item[${\rho }_{j}$] 滞后项系数
+	\item[$L$] 滞后算子
+	\item[${\theta }_{j}$] 新息项系数
+	\item[${{r}_{k}}$] 自相关系数
+	\item[${{\rho }_{kk}}$] 偏相关系数
+\end{multicols}
 \end{denotation}
