--- a/tex/Resume.tex
+++ b/tex/Resume.tex
@@ -3,31 +3,53 @@
 % \chapter{个人简历、在读期间发表的学术论文与研究成果}
 	\resumeitem{个人简历}
 
-	同济人，男/女，xxxx年xx月生。
+	林晓东，男，1990年3月生。
 
-	xxxx年xx月毕业于xxxx大学 xxxx专业 获xx学位。
+	2013年6月毕业于同济大学，土木工程专业，获学士学位。
 
-	xxxx年xx月入同济大学攻读xx学位。
+	2013年9月入同济大学，隧道及地下建筑工程专业，攻读博士研究生。
 
 	\resumeitem{已发表论文}
 
-	\begin{enumerate}[{[}1{]}]
+	\hangindent 1.5em
+	[1]~Xiaojun Li, Xiaodong Lin, Hehua Zhu, Xiuzhi Wang, and Zhaoming Liu. "Condition assessment of shield tunnel using a new indicator: The tunnel serviceability index." Tunnelling and Underground Space Technology 67 (2017): 98-106.
 
-	\item ...
+	\hangindent 1.5em
+	[2]~朱合华, 李晓军, 林晓东. 基础设施智慧服务系统 (iS3) 及其应用. 土木工程学报 51.1 (2018): 1-12.
 
-	\item ...
+	\hangindent 1.5em
+	[3]~林晓东, 李晓军, 林浩. 集成GIS/BIM的盾构隧道全寿命管理系统研究. 隧道建设.
 
-	\item ...
+	\resumeitem{待发表论文}
 
-	\end{enumerate}
+	\hangindent 1.5em
+	[1]~李晓军, 林晓东, 王建, 史海欧, 袁泉, 翟利华. 考虑空间关联性的轨道交通盾构隧道沉降时间序列模型
 
-	\resumeitem{已获得专利}
+	\hangindent 1.5em
+	[2]~李晓军, 林晓东, 朱合华, 陈楠. 考虑发展趋势和动态权重的盾构隧道健康状态模糊层次分析法.
 
-	\begin{enumerate}[{[}1{]}]
+	\resumeitem{学术报告}
 
-	\item ...
+	\hangindent 1.5em
+	[1]~The Second  International  Conference  on  Information  Technology  in  Geo-Engineering (ICITG2014), July 21-22, 2014, Durham, UK. （做了题为“A Web-based Digital Platform for Shield Tunnel Operation Management”的报告）
 
-	\item ...
+	\hangindent 1.5em
+	[2]~The 16th International Conference on Computing in Civil and Building Engineering (ICCCBE2016), July 6-8, 2016, Osaka, Japan. (做了题为“A BIM/GIS-based management and analysis system for shield tunnel in operation”的报告)
 
-	\end{enumerate}
+	\resumeitem{软件著作权}
+
+	\hangindent 1.5em
+	[1]~李晓军, 林晓东, 智慧基础设施（iS3）基础平台软件, 2015SR162360
+
+	\hangindent 1.5em
+	[2]~李晓军, 林晓东, 盾构隧道结构建养一体数字化管理软件, 2015SR162185
+
+	\resumeitem{参与科研项目}
+
+	\hangindent 1.5em
+	[1]~参与国家重点基础研究发展计划（973 计划）,“城市轨道交通地下结构性能演化与感控基础理论（2011CB013800）”，负责课题六中盾构隧道服役性能评估与预测分析的研究。
+
+	\hangindent 1.5em
+	[2]~参与国家自然科学基金，“拼装式盾构结构服役性能退化模型及在隧道维养应用中研究（51478341）”，负责盾构隧道结构服役性能退化模型的维养应用方法研究。
+
 \end{resume}
