--- a/thesis.tex
+++ b/thesis.tex
@@ -28,7 +28,9 @@
 \graphicspath{{fig/}}
 
 %%% 封面部分
+
 \frontmatter
+\includepdf[pages=-]{static/cover.pdf}
 \input{tex/Cover}
 \input{tex/Abstract}
 \makecover
