丁老师修改意见

--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -1465,4 +1465,87 @@
   publisher = {Elsevier},
 }
 
+@Book{rubin2003applied,
+  title     = {Applied stochastic hydrogeology},
+  publisher = {Oxford University Press},
+  year      = {2003},
+  author    = {Rubin, Yoram},
+}
+
+@Article{cressie1988spatial,
+  author    = {Cressie, Noel},
+  title     = {Spatial prediction and ordinary kriging},
+  journal   = {Mathematical geology},
+  year      = {1988},
+  volume    = {20},
+  number    = {4},
+  pages     = {405--421},
+  publisher = {Springer},
+}
+
+@Book{张仁铎2005空间变异理论及应用,
+  title     = {空间变异理论及应用},
+  publisher = {科学出版社},
+  year      = {2005},
+  author    = {张仁铎 and 博士},
+  lang      = {zh},
+  pinyin    = {zhangrenze},
+}
+
+@Article{丁文其2013基于地层,
+  author  = {丁文其 and 朱令 and 彭益成 and 胡金平 and 陈越},
+  title   = {基于地层-结构法的沉管隧道三维数值分析},
+  journal = {岩土工程学报},
+  year    = {2013},
+  volume  = {35},
+  number  = {zk2},
+  pages   = {622--626},
+  lang    = {zh},
+  pinyin  = {dingwenqizhulingpengyicheng},
+}
+
+@Article{彭益成2013盾构隧道衬砌结构的壳,
+  author  = {彭益成 and 丁文其 and 朱合华 and 赵伟 and 金跃郎},
+  title   = {盾构隧道衬砌结构的壳-接头模型研究},
+  journal = {岩土工程学报},
+  year    = {2013},
+  volume  = {35},
+  number  = {10},
+  pages   = {1823--1829},
+  lang    = {zh},
+  pingyin = {pengyichengdingwenqizhuhehua},
+}
+
+@Article{ding2013full,
+  author    = {Ding, Wen-Qi and Peng, Yi-Cheng and Yan, Zhi-Guo and Shen, Bi-Wei and Zhu, He-Hua and Wei, Xin-Xin},
+  title     = {Full-scale testing and modeling of the mechanical behavior of shield TBM tunnel joints},
+  journal   = {Structural Engineering and Mechanics},
+  year      = {2013},
+  volume    = {45},
+  number    = {3},
+  pages     = {337--354},
+  publisher = {Techno-Press},
+}
+
+@Article{gong2017comparison,
+  author    = {Gong, Chenjie and Ding, Wenqi and Mosalam, Khalid M and G{\"u}nay, Selim and Soga, Kenichi},
+  title     = {Comparison of the structural behavior of reinforced concrete and steel fiber reinforced concrete tunnel segmental joints},
+  journal   = {Tunnelling and Underground Space Technology},
+  year      = {2017},
+  volume    = {68},
+  pages     = {38--57},
+  publisher = {Elsevier},
+}
+
+@InProceedings{qiao2014软土地区,
+  author    = {乔亚飞 and 丁文其 and 朱合华 and 官林星 and 王吉云},
+  title     = {软土地区盾构隧道引起地表沉降预测模型的选择},
+  booktitle = {第七届中日盾构隧道技术交流会论文集},
+  year      = {2014},
+  pages     = {304--310},
+  address   = {西安},
+  lang      = {zh},
+  pinyin    = {qiaoyafeidingwenqizhuhehuaguanlinxing},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
