--- a/tex/Chap1.tex
+++ b/tex/Chap1.tex
@@ -117,6 +117,8 @@ Li等（\citeyear{Li2015A}）提出了纵缝接头张开的计算模型。模型
 
 王如路和张冬梅（\citeyear{王如路2013超载作用下软土盾构隧道横向变形机理及控制指标研究}）采用数值模拟方法分析地面压载、土体侧向压力、土体抗力对盾构隧道收敛变形的影响，给出了收敛变形随压载的变化规律，得出收敛变形与衬砌受力、螺栓受力和接缝张开量的关系曲线，在实际工程中可根据隧道的直径测量量判断隧道的变形状态，为隧道的安全性评价提供指导。
 
+丁文其等（\citeyear{丁文其2013基于地层}）采用地层-结构法研究隧道初始地应力平衡、施工顺序、材料本构模型和接触关系等问题，分析不同因素对隧道沉降变形和接头相对变形的影响。
+
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
 \subsection{盾构隧道服役性能预测进展}
 
