--- a/tex/Chap3.tex
+++ b/tex/Chap3.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../thesis.tex
-\chapter{盾构隧道服役性能预测}
+\chapter{考虑空间关联性的盾构隧道服役性能预测}
 \label{chap:prediction}
 
 第~\ref{chap:tsi}~章主要介绍了如何采用当前的观测变量，对盾构隧道服役性能进行评估，由第~\ref{chap:tsi}~章的基本假设可知，TSI计算仅考虑当前时间点的数据，有时候根据已有数据对未来数据的预测同样很重要。对于盾构隧道监测和病害数据，有两个重要的维度：时间和空间。时间维度是指单一点的数据随着时间的发展而变化，空间维度是指不同监测点数据并不是独立的，例如临近的沉降点监测数据应该是相似，不同监测点数据之间存在空间关联性。本章主要内容是在历史监测数据基础上，建立时空数据的预测模型，为隧道服役性能预测提供支持。
@@ -79,7 +79,7 @@
 \section{自回归与滑动平均时间序列模型}
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
-\subsection{基本原理}
+\subsection{ARMA模型基本原理}
 
 时间序列模型可分为平稳时间序列和非平稳时间序列，如图~\ref{fig:时间序列模型分类}~，判断平稳性有两个条件：（1）时间序列的均值函数在所有时间上恒为常数；（2）协方差函数只与时间间隔有关，与位置无关。非平稳序列分为长期趋势、周期/季节性、混沌序列、随机波动等（Small等，\citeyear{small2009transforming}），非平稳性序列有较多模型可以进行分析，如机器学习方面的支持向量回归SVR（Sapankevych和Sankar，\citeyear{sapankevych2009time}）、决策树DT（Change等，\citeyear{chang2011trend}）、随机森林RF（钟登华等，\citeyear{钟登华2018基于混沌时序}）等，深度学习方面的深度神经网络DNN（Liu等，\citeyear{liu2014deep}）、递归神经网络RNN（Ho等，\citeyear{ho2002comparative}）和卷积神经网络CNN（Yang等，\citeyear{yang2015deep}）。非平稳时间序列可通过差分、去除趋势、周期性等方法转换为平稳时间序列（Hillmer和Tiao，\citeyear{hillmer1982arima}）。
 
@@ -171,7 +171,7 @@
 \end{equation}
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
-\subsection{模型建立}
+\subsection{ARMA模型建立}
 \label{chap:armamodelbuilding}
 
 上述介绍的AR、MA和ARMA模型不存在哪个模型是最优的，它们分别描述了时间序列的自然属性，在建立时间序列模型时需选择合适的模型和滞后阶数。时间序列模型要求分析的序列是平稳的，但在实际中大部分的序列都是非平稳的，需将非平稳时间序列转化成平稳时间序列。一般的序列通过一阶差分（式~\ref{equ:diff1}~）或二阶差分（式~\ref{equ:diff2}~）可转换成平稳序列（Hamilton，\citeyear{hamilton1994time}）。
@@ -218,7 +218,7 @@ MA(q)模型，从自相关函数ACF来看，在移动平均方程的基础上也
 除了根据拖尾和截尾的属性，还可以采用AIC（Akaike Information Criterion）(Akaike，\citeyear{akaike2011akaike}）和BIC（Schwarz Criterion）（Schwarz，\citeyear{schwarz1978estimating}）准则进行模型识别。在确定了模型阶数后，可采用矩估计、最小二乘估计和极大似然估计等方法进行参数估计。
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
-\subsection{模型验证}
+\subsection{ARMA模型验证}
 
 时间序列模型的验证可验证模型残差$\left\{ {{\varepsilon }_{t}} \right\}$是否为白噪声，若残差不是白噪声，则说明残差中的信息并未完全提取，应考虑重新选定模型。
 
@@ -238,7 +238,7 @@ MA(q)模型，从自相关函数ACF来看，在移动平均方程的基础上也
 
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
-\subsection{盾构隧道ARMA模型建模}
+\subsection{盾构隧道沉降ARMA模型建模}
 \label{chap:armatunnel}
 
 根据上述时间序列理论，建立时间序列模型大致可以分为稳定性判断、模型识别和模型验证几个步骤，如图~\ref{fig:ARMA时间序列模型建模流程图}~所示。
@@ -488,7 +488,7 @@ MA(q)模型，从自相关函数ACF来看，在移动平均方程的基础上也
 \section{考虑空间效应的结构-向量时间序列模型}
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
-\subsection{基本原理}
+\subsection{结构-向量SVARMA模型原理}
 
 \subsubsection{向量时间序列}
 \label{chap:var}
@@ -625,7 +625,7 @@ MA(q)模型，从自相关函数ACF来看，在移动平均方程的基础上也
 短期约束可以直接施加在矩阵$B_0$，表示变量对结构模型的同期响应，常见的约束方式是0约束排除方法；由于$B_0=C_0^{-1}$，也可以通过对$C_0$施加约束条件实现短期约束。对于长期约束，一般是通过施加在系数矩阵$B_i(i=1,2,\cdots )$上。
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
-\subsection{盾构隧道结构-向量时间序列模型建模}
+\subsection{盾构隧道沉降SVAR模型建模}
 
 \subsubsection{VAR模型}
 
